k8s/staging/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ptf-front
  namespace: ptf-staging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`staging.raphaelrbr.com`)
      kind: Rule
      services:
        - name: ptf-front
          port: 3000
      middlewares:
        - name: compress
        - name: security-headers
  tls:
    secretName: ptf-staging-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: compress
  namespace: ptf-staging
spec:
  compress: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: ptf-staging
spec:
  headers:
    frameDeny: true
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
